--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:newpassword@localhost:5432/medical_lab_db?schema=public"
+DATABASE_URL="postgresql://postgres:_yourpassword@localhost:5432/medical_lab_db?schema=public"
